--- a/src/app/Components/weather/weather.component.css
+++ b/src/app/Components/weather/weather.component.css
@@ -1,7 +1,7 @@
 .blog-card {
     display: inline-block;
-    width: 300px;
-    height: 350px;
+    width: 500px;
+    height: 450px;
     cursor: pointer;
     padding: 8px;
     box-shadow: 2px 0px 13px 7px rgba(0, 0, 0, 0.2);
@@ -11,11 +11,15 @@
     color: #32537B;
 }
 .blog-card img {
-    width: 280px;
+    width: 90%;
 }
 .blog-card p {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+}
+
+.table{
+    border-spacing: 30px;
 }
