--- a/src/app/Components/Common/header/header.component.html
+++ b/src/app/Components/Common/header/header.component.html
@@ -1,6 +1,8 @@
-<div class="top-header">
-    <h1>WeatherApp</h1>
- </div>
- <div class="sub-header">
-    <p>Get current weather details of cities around the world</p>
+<div width='1200px'>
+    <div id="headerbg">
+        <div class="top-header">
+            <img src="../../../../assets/weathericon.png" width="50px" height="40px" style="margin-top: 1%;"/>
+            <h4 style="padding-top: 8%;padding-bottom: 5%;padding-left: 15px; ">Weather App</h4>
+        </div>
+    </div>
 </div>
