--- a/src/app/Components/view-weather/view-weather.component.html
+++ b/src/app/Components/view-weather/view-weather.component.html
@@ -2,7 +2,7 @@
 
 <div class='blog-post' *ngIf="authService.isAuthenticated$ | async">
     <ng-container >
-        <app-weather *ngFor="let weather of currentWeather" [weather]="weather"></app-weather>
+        <app-weather style="padding-left:50px;" *ngFor="let weather of currentWeather" [weather]="weather"></app-weather>
     </ng-container>
 </div>
 
