--- a/src/app/Components/weather/weather.component.html
+++ b/src/app/Components/weather/weather.component.html
@@ -1,19 +1,37 @@
-<div class="blog-card" ng-app='app'>
-    <h3 class="blog-title">
-      {{ weather.name }}
-    </h3>
-    <span class="blog-desc">
-        <h2>
-            {{ weather.main.temp }}
-        </h2>    
-    </span>
-    <div class="blog-cover-image">
-        <img src="https://wi-images.condecdn.net/image/doEYpG6Xd87/crop/2040/f/weather.jpg" alt="weather-image" />
+<div class = "blog-card" ng-app = 'app'>
+    <div>
+        <table class = 'table-borderless'>
+            <tr>
+                <td>
+                    <h3 class = "blog-title">
+                        {{ weather.name + ", " + weather.sys.country }}
+                    </h3>
+                    <br>
+                    <p class = "blog-desc">
+                        {{ weather.weather[0].description }}
+                    </p>  
+                </td>
+                <td>
+                    <h1>{{ weather.main.temp + 'C' }}</h1>
+                    <p>{{ "Temp Min:" + weather.main.temp_min }}</p>
+                    <p>{{ "Temp Max:" + weather.main.temp_max }}</p>  
+                </td>    
+            </tr>
+        </table>    
+    </div>    
+    <div style = "background-color: #222425;">
+        <table class = "table-borderless">
+            <tr>
+                <td>
+                    <p style = "color:white">{{ "Pressure:" + weather.main.pressure + "Pa" }}</p>
+                    <p style = "color:white">{{ "Humidity:" + weather.main.humidity + "%" }}</p>
+                    <p style = "color:white">{{ "Visibility:" + (weather.main.visibility / 1000) + "km" }}</p>
+                </td>
+                <td>
+                    <p style = "color:white">{{ weather.wind.speed + "m/s " + weather.wind.deg + "Degree" }}</p>
+                </td>
+            </tr>
+        </table>
     </div>
+</div>        
 
-    <br>
-    <h4 class="blog-desc">
-       {{ weather.weather[0].description }}
-    </h4> 
-    
-</div>
