--- a/src/app/Components/Common/header/header.component.css
+++ b/src/app/Components/Common/header/header.component.css
@@ -34,3 +34,10 @@ input[type=text] {
     border-radius: 2px;
     color: white;
 }
+
+.top-corner{
+    position:absolute;
+    top:0;
+    right:0;
+    margin-top: 10px;
+}
