--- a/src/app/Components/Common/header/header.component.html
+++ b/src/app/Components/Common/header/header.component.html
@@ -1,8 +1,10 @@
-<div width='1200px'>
-    <div id="headerbg">
-        <div class="top-header">
-            <img src="../../../../assets/weathericon.png" width="50px" height="40px" style="margin-top: 1%;"/>
+<div id="headerbg">
+    <div class="top-corner">
+        <app-authentication-btn></app-authentication-btn>
+    </div>
+    <div class="top-header">
+        <img src="../../../../assets/weathericon.png" width="50px" height="40px" style="margin-top: 1%;"/>
             <h4 style="padding-top: 8%;padding-bottom: 5%;padding-left: 15px; ">Weather App</h4>
-        </div>
     </div>
 </div>
+
