--- a/src/app/Components/weather/weather.component.html
+++ b/src/app/Components/weather/weather.component.html
@@ -1,6 +1,6 @@
 <div class = "blog-card" ng-app = 'app'>
-    <div>
-        <table class = 'table-borderless'>
+    <table class = 'table table-borderless'>
+        <tbody>
             <tr>
                 <td>
                     <h3 class = "blog-title">
@@ -12,15 +12,15 @@
                     </p>  
                 </td>
                 <td>
-                    <h1>{{ weather.main.temp + 'C' }}</h1>
+                    <h1>{{ weather.main.temp + ' C' }}</h1>
                     <p>{{ "Temp Min:" + weather.main.temp_min }}</p>
                     <p>{{ "Temp Max:" + weather.main.temp_max }}</p>  
                 </td>    
             </tr>
-        </table>    
-    </div>    
-    <div style = "background-color: #222425;">
-        <table class = "table-borderless">
+        </tbody>
+    </table>
+    <table class = "table table-borderless table-dark">
+        <tbody>
             <tr>
                 <td>
                     <p style = "color:white">{{ "Pressure:" + weather.main.pressure + "Pa" }}</p>
@@ -28,10 +28,13 @@
                     <p style = "color:white">{{ "Visibility:" + (weather.main.visibility / 1000) + "km" }}</p>
                 </td>
                 <td>
-                    <p style = "color:white">{{ weather.wind.speed + "m/s " + weather.wind.deg + "Degree" }}</p>
+                    <p style = "color:white">{{ weather.wind.speed + "m/s " + weather.wind.deg + " Degree" }}</p>
+                </td>
+                <td>
+                    
                 </td>
             </tr>
-        </table>
-    </div>
+        </tbody>    
+    </table>
 </div>        
 
