--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<app-view-weather></app-view-weather>
-<app-footer></app-footer>
+<div width='1200px'>
+    <app-header></app-header>
+    <app-view-weather></app-view-weather>
+    <app-footer></app-footer>
+</div>
