--- a/src/app/Components/loading-spinner/loading-spinner.component.html
+++ b/src/app/Components/loading-spinner/loading-spinner.component.html
@@ -1,4 +1,4 @@
-<div class="sk-chase">
+<div class="sk-chase justify-content-center">
     <div class="sk-chase-dot"></div>
     <div class="sk-chase-dot"></div>
     <div class="sk-chase-dot"></div>
