fixed api call after auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div width='1200px'>
     <app-header></app-header>
-    <app-view-weather></app-view-weather>
+    <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
