--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div width='1200px'>
     <app-header></app-header>
-    <router-outlet></router-outlet>
+    <app-home></app-home>
     <app-footer></app-footer>
 </div>
