--- a/src/app/Components/Common/footer/footer.component.html
+++ b/src/app/Components/Common/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div width='1200px' class="footer" *ngIf="authService.isAuthenticated$ | async">
+<div class="footer" *ngIf="authService.isAuthenticated$ | async">
     <p>2021 Fidenz Technologies</p>
 </div>
 
