--- a/src/app/Components/view-weather/view-weather.component.css
+++ b/src/app/Components/view-weather/view-weather.component.css
@@ -4,3 +4,11 @@
     border: 1px solid #0F011F;
     padding: 10px;
 }
+
+.weather{
+    padding-left: 50px;
+}
+
+.p-weather{
+    text-align: center;
+}
