--- a/src/app/Components/Common/header/header.component.css
+++ b/src/app/Components/Common/header/header.component.css
@@ -36,8 +36,20 @@ input[type=text] {
 }
 
 .top-corner{
-    position:absolute;
-    top:0;
-    right:0;
+    position: absolute;
+    top: 0;
+    right: 0;
     margin-top: 10px;
+}
+
+.img-header{
+    width: 50px;
+    height: 40px; 
+    margin-top: 1%;
+}
+
+.h4-header{
+    padding-top: 8%;
+    padding-bottom: 5%;
+    padding-left: 15px;
 }
