--- a/src/app/Components/Common/header/header.component.html
+++ b/src/app/Components/Common/header/header.component.html
@@ -3,8 +3,8 @@
         <app-authentication-btn></app-authentication-btn>
     </div>
     <div class="top-header">
-        <img src="../../../../assets/weathericon.png" width="50px" height="40px" style="margin-top: 1%;"/>
-            <h4 style="padding-top: 8%;padding-bottom: 5%;padding-left: 15px; ">Weather App</h4>
+        <img class="img-header" src="../../../../assets/weathericon.png"/>
+            <h4 class="h4-header">Weather App</h4>
     </div>
 </div>
 
