--- a/src/app/Components/weather/weather.component.html
+++ b/src/app/Components/weather/weather.component.html
@@ -1,13 +1,13 @@
-<div class = "blog-card" ng-app = 'app'>
-    <table class = 'table table-borderless'>
+<div class="blog-card" ng-app = 'app'>
+    <table class='table table-borderless'>
         <tbody>
             <tr>
                 <td>
-                    <h3 class = "blog-title">
+                    <h3 class="blog-title">
                         {{ weather.name + ", " + weather.sys.country }}
                     </h3>
                     <br>
-                    <p class = "blog-desc">
+                    <p class="blog-desc">
                         {{ weather.weather[0].description }}
                     </p>  
                 </td>
@@ -19,16 +19,16 @@
             </tr>
         </tbody>
     </table>
-    <table class = "table table-borderless table-dark">
+    <table class="table table-borderless table-dark">
         <tbody>
             <tr>
                 <td>
-                    <p style = "color:white">{{ "Pressure:" + weather.main.pressure + "Pa" }}</p>
-                    <p style = "color:white">{{ "Humidity:" + weather.main.humidity + "%" }}</p>
-                    <p style = "color:white">{{ "Visibility:" + (weather.main.visibility / 1000) + "km" }}</p>
+                    <p class="p-light">{{ "Pressure:" + weather.main.pressure + "Pa" }}</p>
+                    <p class="p-light">{{ "Humidity:" + weather.main.humidity + "%" }}</p>
+                    <p class="p-light">{{ "Visibility:" + (weather.main.visibility / 1000) + "km" }}</p>
                 </td>
                 <td>
-                    <p style = "color:white">{{ weather.wind.speed + "m/s " + weather.wind.deg + " Degree" }}</p>
+                    <p class="p-light">{{ weather.wind.speed + "m/s " + weather.wind.deg + " Degree" }}</p>
                 </td>
                 <td>
                     
